--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,15 @@ dependencies:
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   dotted_border: ^2.1.0
+  file_picker: ^8.1.4
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.13
   freezed_annotation: ^2.4.4
   http: ^1.2.2
+  intl: ^0.19.0
+  path: 1.9.0
   shared_preferences: ^2.3.3
 
 dev_dependencies:
