--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_markdown: ^0.7.4+1
+  flutter_markdown_latex: ^0.3.4
   flutter_svg: ^2.0.13
   freezed_annotation: ^2.4.4
+  html2md: ^1.3.2
   http: ^1.2.2
   intl: ^0.19.0
+  markdown: ^7.2.2
   path: 1.9.0
   shared_preferences: ^2.3.3
 
