--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   http: ^1.2.2
   intl: ^0.19.0
-  path: 1.9.0
+  path: ^1.9.0
   shared_preferences: ^2.3.3
 
 dev_dependencies:
