--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^1.2.2
   intl: ^0.19.0
   markdown: ^7.2.2
+  mobile_scanner: ^6.0.2
   path: 1.9.0
   shared_preferences: ^2.3.3
 
