--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  bloc: ^8.1.4
+  bloc: ^9.0.0
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
@@ -36,23 +36,24 @@ dependencies:
   file_picker: ^8.1.4
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.6
+  flutter_bloc: ^9.0.0
   flutter_markdown: ^0.7.4+1
   flutter_markdown_latex: ^0.3.4
   flutter_svg: ^2.0.13
   freezed_annotation: ^2.4.4
   html2md: ^1.3.2
   http: ^1.2.2
-  intl: ^0.19.0
-  path: ^1.9.0
+  intl: ^0.20.2
   markdown: ^7.2.2
   mobile_scanner: ^6.0.2
-  shared_preferences: ^2.3.3
+  path: ^1.9.0
+  shared_preferences: ^2.4.0
+  shimmer_animation: ^2.2.2
   url_launcher: ^6.3.1
 
 dev_dependencies:
   build_runner: ^2.4.13
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   freezed: ^2.5.7
