--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   html2md: ^1.3.2
   http: ^1.2.2
   intl: ^0.20.2
+  lottie: ^3.3.1
   markdown: ^7.2.2
   mobile_scanner: ^6.0.2
   path: ^1.9.0
@@ -72,6 +73,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/icon_json/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
