--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_markdown: ^0.7.4+1
   flutter_markdown_latex: ^0.3.4
   flutter_svg: ^2.0.13
+  flutter_inappwebview: ^6.1.5
   freezed_annotation: ^2.4.4
   html2md: ^1.3.2
   http: ^1.2.2
