--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_markdown_latex: ^0.3.4
   flutter_svg: ^2.0.13
   flutter_inappwebview: ^6.1.5
+  flutter_launcher_icons: ^0.14.3
   freezed_annotation: ^2.4.4
   html2md: ^1.3.2
   http: ^1.2.2
@@ -60,6 +61,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.5.7
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
