--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_custom_dropdown: ^3.1.1
   bloc: ^9.0.0
   cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
@@ -37,11 +38,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  flutter_inappwebview: ^6.1.5
+  flutter_launcher_icons: ^0.14.3
   flutter_markdown: ^0.7.4+1
   flutter_markdown_latex: ^0.3.4
   flutter_svg: ^2.0.13
-  flutter_inappwebview: ^6.1.5
-  flutter_launcher_icons: ^0.14.3
   freezed_annotation: ^2.4.4
   html2md: ^1.3.2
   http: ^1.2.2
