--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   flutter_markdown_latex: ^0.3.4
   flutter_math_fork: ^0.7.3
   flutter_svg: ^2.0.13
-  freezed_annotation: ^3.0.0
+  freezed_annotation: ^2.4.4
+  google_sign_in: ^6.3.0
   html2md: ^1.3.2
   http: ^1.2.2
   intl: ^0.20.2
@@ -58,11 +59,11 @@ dependencies:
   url_launcher: ^6.3.1
 
 dev_dependencies:
-  build_runner: ^2.4.13
+  build_runner: ^2.4.14
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  freezed: ^3.0.6
+  freezed: ^2.5.8
 
 flutter_launcher_icons:
   android: "launcher_icon"
