--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,12 @@ dependencies:
   flutter_math_fork: ^0.7.3
   flutter_svg: ^2.0.13
   freezed_annotation: ^2.4.4
+  geolocator: ^14.0.0
   google_sign_in: ^6.3.0
   html2md: ^1.3.2
   http: ^1.2.2
   intl: ^0.20.2
+  latlong2: ^0.9.1
   lottie: ^3.3.1
   markdown: ^7.2.2
   mobile_scanner: ^6.0.2
